--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -10,3 +10,11 @@ email: david@sevenkingswebdesign.co.uk
 phoneNumber: "07877304672"
 companyNumber: "15653819"
 logoUrl: /_includes/static/img/logo.webp
+seoName: Seven Kings Web Design
+streetAddress: 23 Carisbrooke House, Royal Quarter, Seven Kings Way
+townCity: Kingston Upon Thames
+country: GB
+region: London
+postCode: KT2 5BS
+weekDayOpening: 09:00
+weekDayClosing: 17:00
